# ros_people_tracking_robot

./: README.md  rsync.sh  tfm_commands
anticrash/: CMakeLists.txt  package.xml
anticrash/include/: antiCrash.h  rossharedmemoryAnticrash.h
anticrash/launch/: antiCrash.launch
anticrash/src/: antiCrash.cpp  antiCrashNode.cpp
navigator/: CMakeLists.txt  package.xml
navigator/config/: base_local_planner_params.yaml  costmap_common_params.yaml  costmap_common_params_next.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml
navigator/include/: rossharedmemoryExploration.h  wheelSpeed.h
navigator/include/navigator/: wheelchairNav.h
navigator/launch/: move_base.launch
navigator/msg/: wheelSpeed.msg
navigator/src/: wheelAdaptativeController.cpp  wheelchairNav.cpp
online_learning/object3d_detector/launch/: object3d_detector.launch  object3d_detector_ol.launch  object3d_detector_ol_test.launch  object3d_detector_test.launch  object3d_detector_test2.launch
online_learning/object3d_detector/src/: object3d_detector.cpp  object3d_detector_ol.cpp
ouster-ros/launch/: sensor_test.launch
people_follower/: CMakeLists.txt  package.xml
people_follower/launch/: object3d_detector.launch  object3d_detector_ol.launch  people_follower.launch
people_follower/src/: peopleFollower.cpp
robot_state/: CMakeLists.txt  package.xml
robot_state/include/: rossharedmemory.h  rossharedmemoryRobotState.h
robot_state/msg/: wheelSpeed.msg
robot_state/src/: RobotState.cpp
rtabmap_ros/launch/: launch_setup.sh  ouster_neo.launch  ouster_neo_test.launch  ouster_neo_test_2.launch  ouster_neo_test_3.launch  ouster_next.launch  rtabmap_start_neo.sh  rtabmap_start_next.sh
(+3 files in other folders)
