<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="2">
    <name>anticrash</name>
    <version>0.0.0</version>
    <description>
        Node that avoids collision with objetcs
    </description>
    <author>Victor Carhuaricra</author>
    <maintainer email="victor.carhuaricra@gmail.com">Victor Carhuaricra</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>pcl_ros</depend>
    <depend>pcl_conversions</depend>

</package>